# pyd2s

./: .gitattributes  .gitignore  COPYING  README.md  create_tests.sh  grail-stash.toml  pyproject.toml  setup.py
.github/workflows/: flake8.yml  pylint.yml  pytest.yml
docs/: d2s_110_format_table.txt  d2s_notes.txt  d2s_save_file_format_1.13d.txt  d2s_save_file_format_1.14d.txt  d2s_save_item_format_1.13d.txt  d2s_save_item_format_1.14d.txt  d2s_save_skills_format_1.13d.txt  d2s_save_skills_format_1.14d.txt  d2s_save_stat_format_1.13d.txt  file_guide_armor.txt  file_guide_gems.txt  file_guide_hireling.txt  file_guide_itemstatcost.txt  file_guide_itemtypes.txt  file_guide_levels.txt  file_guide_magicprefix_suffix.txt  file_guide_misc.txt  file_guide_properties.txt  file_guide_setitems.txt  file_guide_skills.txt  file_guide_weapons.txt
gamedata/: .gitignore  extract_gamedata.sh  listfile.txt
pyd2s/: __init__.py  basictypes.py  character.py  item.py  itemdata.py  mercenary.py  pyd2s.py  questdata.py  savebuffer.py  skill.py  statdata.py  types.py  waypointdata.py
pyd2s/stat/: __init__.py  __main__.py
sample/: pyd2s_flags.py  pyd2s_gold.py  pyd2s_money.py  pyd2s_stat.py  pyd2s_sunrise.py  pyd2s_update.py
src/pyd2s/: __init__.py  basictypes.py  character.py  gamedata.py  item.py  itemdata.py  itemlocation.py  itemstat.py  mercenary.py  plugydata.py  questdata.py  savebuffer.py  waypointdata.py
src/pyd2s_grail/: __init__.py  __main__.py
src/pyd2s_stat/: __init__.py
src/sample/: pyd2s_flags.py  pyd2s_gold.py  pyd2s_sunrise.py
tests/: test_items.py
(+664 files in other folders)
