
[project]
name = "pyd2s"
description = "a python library to read and write diablo 2 save files"
version = "0.0.0"
authors = [
    { name = "Andreas Grapentin", email = "andreas@grapentin.org" },
]
readme = "README.md"
license = { text = "MIT" }

dependencies = ['colorama']

[project.scripts]
pyd2s_stat = "pyd2s_stat:pyd2s_stat"
